--- a/cicd/pipeline/myapp-eventlistener.yaml
+++ b/cicd/pipeline/myapp-eventlistener.yaml
@@ -1,7 +1,7 @@
 apiVersion: triggers.tekton.dev/v1beta1
 kind: EventListener
 metadata:
-  name: myapp-branch
+  name: myapp
 spec:
  serviceAccountName: pipeline
  triggers:
