--- a/cicd/pipeline/myapp-triggertemplate.yaml
+++ b/cicd/pipeline/myapp-triggertemplate.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       serviceAccountName: pipeline
       pipelineRef:
-        name: myapp-pipeline
+        name: myapp-ci-pipeline
       timeouts:
         pipeline: 1h0m0s
       params:
