--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -101,6 +101,7 @@ spec:
           value: Update dev environment
       runAfter:
         - check-branch
+        - debug-git-task
       taskRef:
         kind: ClusterTask
         name: echo
