--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -48,6 +48,7 @@ spec:
       default: default
     - name: environment
       type: string
+      default: default
   tasks:
     - name: git-clone
       params:
