--- a/cicd/pipeline/myapp-triggertemplate.yaml
+++ b/cicd/pipeline/myapp-triggertemplate.yaml
@@ -1,4 +1,4 @@
-lapiVersion: triggers.tekton.dev/v1beta1
+apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerTemplate
 metadata:
   name: myapp-triggertemplate
@@ -33,7 +33,7 @@ spec:
       - name: ext-branch
         value: $(tt.params.ext-branch)
       - name: environment
-        value: default
+        value: $(tt.params.environment)
       workspaces:
       - name: source
         persistentVolumeClaim:
