--- a/cicd/pipeline/myapp-triggertemplate.yaml
+++ b/cicd/pipeline/myapp-triggertemplate.yaml
@@ -4,19 +4,19 @@ metadata:
   name: myapp-triggertemplate
 spec:
   params:
-  - name: git-repo-url
+  - name: git_repo_url
     description: The git repository url
-  - name: git-revision
+  - name: git_revision
     description: The git revision
-  - name: git-repo-name
+  - name: git_repo_name
     description: The name of the deployment to be created / patch
-  - name: ext-branch
+  - name: ext_branch
   - name: environment
   resourcetemplates:
   - apiVersion: tekton.dev/v1beta1
     kind: PipelineRun
     metadata:
-      generateName: myapp-$(tt.params.git-repo-name)-$(tt.params.ext-branch)-
+      generateName: myapp-$(tt.params.git_repo_name)-$(tt.params.ext_branch)-
     spec:
       serviceAccountName: pipeline
       pipelineRef:
@@ -24,14 +24,14 @@ spec:
       timeouts:
         pipeline: 1h0m0s
       params:
-      - name: git-repo-name
-        value: $(tt.params.git-repo-name)
+      - name: git_repo_name
+        value: $(tt.params.git_repo_name)
       - name: git-url
-        value: $(tt.params.git-repo-url)
-      - name: git-revision
-        value: $(tt.params.git-revision)
-      - name: ext-branch
-        value: $(tt.params.ext-branch)
+        value: $(tt.params.git_repo_url)
+      - name: git_revision
+        value: $(tt.params.git_revision)
+      - name: ext_branch
+        value: $(tt.params.ext_branch)
       - name: environment
         value: "Default"
       workspaces:
