--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -151,10 +151,10 @@ spec:
         kind: ClusterTask
         name: echo
       when:
-        - input: $(params.environment)
+        - input: $(tasks.get-branch-task.results.environment)
           operator: in
           values:
-            - tags
+            - "tags"
   finally:
     - name: clean-taskrun
       params:
