update branch tag

--- a/cicd/pipeline/get-branch-task.yaml
+++ b/cicd/pipeline/get-branch-task.yaml
@@ -44,6 +44,7 @@ spec:
       script: |
         if [[ $ext_branch == refs-heads-* ]]; then
             environment=$(echo $ext_branch | cut -d '-' -f 3)
+            image_tag=$($git_revision:0:7)
         elif [[ $ext_branch == refs-tags-* ]]; then
             environment=$(echo $ext_branch | cut -d '-' -f 2)
             image_tag=$(echo $ext_branch | cut -d '-' -f 3)
@@ -52,4 +53,6 @@ spec:
         fi  
         printf "%s" "${environment}" > "$(results.environment.path)"
         printf "%s" "${image_tag}" > "$(results.image_tag.path)"
+
+
  
