--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -174,7 +174,7 @@ spec:
         - name: image_tag
           value: $(tasks.initial-info.results.image_tag)
       runAfter:
-        - initial-info
+        - sonarqube-scanner
       taskRef:
         kind: ClusterTask
         name: echo
@@ -192,7 +192,7 @@ spec:
         - name: image_tag
           value: $(tasks.initial-info.results.image_tag)
       runAfter:
-        - initial-info
+        - sonarqube-scanner
       taskRef:
         kind: ClusterTask
         name: echo
