--- a/cicd/pipeline/buildah-custom-task.yaml
+++ b/cicd/pipeline/buildah-custom-task.yaml
@@ -66,6 +66,8 @@ spec:
       name: build-and-push
       resources: {}
       script: |
+        pwd
+        ls -la
         buildah --storage-driver=$(params.STORAGE_DRIVER) bud \
           $(params.BUILD_EXTRA_ARGS) --format=$(params.FORMAT) \
           --tls-verify=$(params.TLSVERIFY) --no-cache \
