--- a/app/myapp/env/dev/deployment.yaml
+++ b/app/myapp/env/dev/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: myapp
-          image: default-route-openshift-image-registry.apps.524vf.dynamic.opentlc.com/cicd/spring-web-quickstart:dsdsds
+          image: image-registry.openshift-image-registry.svc:5000/cicd/spring-web-quickstart:dsdsds
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
