--- a/cicd/pipeline/buildah-custom-task.yaml
+++ b/cicd/pipeline/buildah-custom-task.yaml
@@ -71,7 +71,8 @@ spec:
          -t image-registry.openshift-image-registry.svc:5000/cicd/$(params.git_repo_name):$(tasks.initial-info.results.image_tag)
         
         buildah --storage-driver=vfs push --format oci --tls-verify=false \
-         image-registry.openshift-image-registry.svc:5000/cicd/$(params.git_repo_name):$(tasks.initial-info.results.image_tag) docker://$(params.git_repo_name):$(tasks.initial-info.results.image_tag)
+         image-registry.openshift-image-registry.svc:5000/cicd/$(params.git_repo_name):$(tasks.initial-info.results.image_tag) \
+          docker://$(params.git_repo_name):$(tasks.initial-info.results.image_tag)
 
       securityContext:
         capabilities:
