--- a/cicd/pipeline/buildah-custom-task.yaml
+++ b/cicd/pipeline/buildah-custom-task.yaml
@@ -66,13 +66,9 @@ spec:
       name: build-and-push
       resources: {}
       script: |
-        buildah --storage-driver=vfs build --format oci --tls-verify=false --no-cache \
-         -f ./docker/Dockerfile  \ 
-         -t image-registry.openshift-image-registry.svc.5000/cicd/$(params.git_repo_name):$(tasks.initial-info.results.image_tag)
-        
-        buildah --storage-driver=vfs push --format oci --tls-verify=false \
-         image-registry.openshift-image-registry.svc.5000/cicd/$(params.git_repo_name):$(tasks.initial-info.results.image_tag) \
-          docker://$(params.git_repo_name):$(tasks.initial-info.results.image_tag)
+buildah --storage-driver=vfs build --format oci --tls-verify=false --no-cache -f ./docker/Dockerfile  -t default-route-openshift-image-registry.apps.524vf.dynamic.opentlc.com/cicd/spring-web-quickstart:dsdsds
+
+buildah --storage-driver=vfs push --format oci --tls-verify=false default-route-openshift-image-registry.apps.524vf.dynamic.opentlc.com/cicd/spring-web-quickstart:dsdsds docker://default-route-openshift-image-registry.apps.524vf.dynamic.opentlc.com/cicd/spring-web-quickstart:dsdsds
 
       securityContext:
         capabilities:
