--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -209,6 +209,10 @@ spec:
       params:
         - name: image_tag
           value: $(tasks.initial-info.results.image_tag)
+        - name: app_name
+          value: $(params.git_repo_name)
+        - name: image_repo_url
+          value: 'default-route-openshift-image-registry.apps.524vf.dynamic.opentlc.com/cicd'
         - name: IMAGE
           value: default
         - name: BUILDER_IMAGE
