--- a/cicd/pipeline/myapp-triggertemplate.yaml
+++ b/cicd/pipeline/myapp-triggertemplate.yaml
@@ -38,3 +38,7 @@ spec:
       - name: source
         persistentVolumeClaim:
           claimName: myapp-source
+      - name: secret
+        secret:
+          secretName: github-pat-secret
+        
